--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "react-redux": "^7.1.3",
     "react-scripts": "^3.3.0",
     "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "tachyons": "^4.11.1"
   },
   "scripts": {
